--- a/css/main.css
+++ b/css/main.css
@@ -16,71 +16,67 @@ body {
 /* line 20, ../sass/main.scss */
 h1 {
   font-size: 2.5em;
-  margin: .4em 0 .4em 0;
+  margin: .5em 0 .4em 0;
+  border-bottom: 5px solid #ff3a90;
+  text-align: left;
 }
 
-/* line 24, ../sass/main.scss */
+/* line 26, ../sass/main.scss */
 h2 {
   font-size: 1.5em;
-  margin: .3em 0 .2em 0;
+  margin: .5em 0 .2em 0;
 }
 
-/* line 28, ../sass/main.scss */
+/* line 30, ../sass/main.scss */
 h3 {
   font-size: 1em;
-  margin: .3em 0 .2em 0;
+  margin: .5em 0 .2em 0;
 }
 
-/* line 33, ../sass/main.scss */
+/* line 35, ../sass/main.scss */
 p {
-  margin: 1em 0 .5em 0;
+  margin: .5em 0 .5em 0;
   line-height: 1.3em;
 }
 
-/* line 37, ../sass/main.scss */
+/* line 39, ../sass/main.scss */
 .text-block {
   text-align: left;
 }
 
-/* line 46, ../sass/main.scss */
+/* line 48, ../sass/main.scss */
 .about {
   background-color: #8c8b8c;
 }
 
-/* line 49, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
 .portfolio {
   background-color: #06377b;
 }
 
-/* line 52, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 .skills {
   background-color: #6f962b;
 }
 
-/* line 55, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .contact {
   background-color: #5e5e5e;
 }
 
-/* line 58, ../sass/main.scss */
+/* line 60, ../sass/main.scss */
 #fullpage {
   width: 100%;
 }
 
-/* line 61, ../sass/main.scss */
+/* line 63, ../sass/main.scss */
 .section {
   text-align: center;
   width: 100%;
   padding: 0 3%;
 }
 
-/* line 67, ../sass/main.scss */
-.page-header {
-  border-bottom: 5px solid #ff3a90;
-  text-align: left;
-}
-
-/* line 72, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 .tableCell {
   /* For use with fullpage.js sections */
   vertical-align: top;
@@ -88,24 +84,24 @@ p {
   padding-bottom: 4%;
 }
 
-/* line 82, ../sass/main.scss */
+/* line 79, ../sass/main.scss */
 div .about-photo {
   width: 75%;
   max-width: 300px;
   min-width: 175px;
 }
 
-/* line 92, ../sass/main.scss */
+/* line 89, ../sass/main.scss */
 .project {
   position: relative;
 }
 
-/* line 95, ../sass/main.scss */
+/* line 92, ../sass/main.scss */
 .project-img {
   width: 80%;
 }
 
-/* line 98, ../sass/main.scss */
+/* line 95, ../sass/main.scss */
 .project-img-overlay {
   display: none;
   position: absolute;
@@ -117,7 +113,7 @@ div .about-photo {
   width: 80%;
 }
 
-/* line 111, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 .project-img-text {
   display: none;
   color: white;
@@ -130,7 +126,12 @@ div .about-photo {
   margin-left: -20%;
 }
 
-/* line 131, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
+.column-padding {
+  padding-right: 2% !important;
+}
+
+/* line 133, ../sass/main.scss */
 #contact-links li {
   display: inline-block;
   margin: 10px;
@@ -140,19 +141,19 @@ div .about-photo {
   width: 64px;
   height: 64px;
 }
-/* line 140, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 #contact-links li img {
   width: 64px;
   height: 64px;
   -webkit-border-radius: 11px;
   border-radius: 11px;
 }
-/* line 146, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 #contact-links li:hover {
   background: white;
 }
 
-/* line 155, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 #menu li {
   display: inline-block;
   margin: 10px;
@@ -163,42 +164,42 @@ div .about-photo {
   border-radius: 10px;
 }
 
-/* line 164, ../sass/main.scss */
+/* line 166, ../sass/main.scss */
 #menu li.active {
   background: #666;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
 }
 
-/* line 169, ../sass/main.scss */
+/* line 171, ../sass/main.scss */
 #menu li a {
   text-decoration: none;
   color: #000;
 }
 
-/* line 173, ../sass/main.scss */
+/* line 175, ../sass/main.scss */
 #menu li.active a:hover {
   color: #000;
 }
 
-/* line 176, ../sass/main.scss */
+/* line 178, ../sass/main.scss */
 #menu li:hover {
   background: rgba(255, 255, 255, 0.8);
 }
 
-/* line 180, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 #menu li a,
 #menu li.active a {
   padding: 9px 18px;
   display: block;
 }
 
-/* line 184, ../sass/main.scss */
+/* line 186, ../sass/main.scss */
 #menu li.active a {
   color: #fff;
 }
 
-/* line 187, ../sass/main.scss */
+/* line 189, ../sass/main.scss */
 #menu {
   position: fixed;
   top: 0;
@@ -210,50 +211,50 @@ div .about-photo {
   margin: 0;
 }
 
-/* line 203, ../sass/main.scss */
+/* line 205, ../sass/main.scss */
 .container {
   width: 100%;
   border: 0;
   clear: both;
 }
 
-/* line 209, ../sass/main.scss */
+/* line 211, ../sass/main.scss */
 .column {
   float: left;
   padding: 4px;
 }
 
-/* line 214, ../sass/main.scss */
+/* line 216, ../sass/main.scss */
 .column-20 {
   width: 20%;
 }
 
-/* line 218, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 .column-25 {
   width: 25%;
 }
 
-/* line 222, ../sass/main.scss */
+/* line 224, ../sass/main.scss */
 .column-33 {
   width: 33%;
 }
 
-/* line 226, ../sass/main.scss */
+/* line 228, ../sass/main.scss */
 .column-50 {
   width: 50%;
 }
 
-/* line 230, ../sass/main.scss */
+/* line 232, ../sass/main.scss */
 .column-66 {
   width: 66.667%;
 }
 
-/* line 234, ../sass/main.scss */
+/* line 236, ../sass/main.scss */
 .column-75 {
   width: 75%;
 }
 
-/* line 238, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .column-100 {
   width: 100%;
 }
