--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,10 @@ body {
   font-family: arial,helvetica;
   color: white;
   font-size: 16px;
+  background: #8c8b8c;
 }
 
-/* line 20, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 h1 {
   font-size: 2.5em;
   margin: .5em 0 .4em 0;
@@ -21,62 +22,62 @@ h1 {
   text-align: left;
 }
 
-/* line 26, ../sass/main.scss */
+/* line 27, ../sass/main.scss */
 h2 {
   font-size: 1.5em;
   margin: .5em 0 .2em 0;
 }
 
-/* line 30, ../sass/main.scss */
+/* line 31, ../sass/main.scss */
 h3 {
   font-size: 1em;
   margin: .5em 0 .2em 0;
 }
 
-/* line 35, ../sass/main.scss */
+/* line 36, ../sass/main.scss */
 p {
   margin: .5em 0 .5em 0;
   line-height: 1.3em;
 }
 
-/* line 39, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
 .text-block {
   text-align: left;
 }
 
-/* line 48, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 .about {
   background-color: #8c8b8c;
 }
 
-/* line 51, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .portfolio {
   background-color: #06377b;
 }
 
-/* line 54, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 .skills {
   background-color: #6f962b;
 }
 
-/* line 57, ../sass/main.scss */
+/* line 58, ../sass/main.scss */
 .contact {
   background-color: #5e5e5e;
 }
 
-/* line 60, ../sass/main.scss */
+/* line 61, ../sass/main.scss */
 #fullpage {
   width: 100%;
 }
 
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .section {
   text-align: center;
   width: 100%;
   padding: 0 3%;
 }
 
-/* line 69, ../sass/main.scss */
+/* line 70, ../sass/main.scss */
 .tableCell {
   /* For use with fullpage.js sections */
   vertical-align: top;
@@ -84,60 +85,69 @@ p {
   padding-bottom: 4%;
 }
 
-/* line 79, ../sass/main.scss */
+/* line 80, ../sass/main.scss */
 div .about-photo {
   width: 75%;
   max-width: 300px;
   min-width: 175px;
 }
 
-/* line 89, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .project {
   position: relative;
 }
 
-/* line 92, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 .project-img {
-  width: 80%;
+  width: 100%;
+  height: 100%;
 }
 
-/* line 95, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .project-img-overlay {
   display: none;
   position: absolute;
   top: 0;
-  left: 50%;
-  margin-left: -40%;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.6);
   height: 99%;
-  width: 80%;
+  width: 100%;
 }
 
-/* line 108, ../sass/main.scss */
-.project-img-text {
-  display: none;
-  color: white;
-  text-align: center;
+/* line 107, ../sass/main.scss */
+.project:hover .project-img-overlay {
+  display: block;
+}
+
+/* line 110, ../sass/main.scss */
+.project-img-overlay p {
+  color: #fff;
   font-size: 2em;
   position: absolute;
+  text-align: center;
   top: 50%;
   left: 50%;
-  margin-top: -5%;
-  margin-left: -20%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 0;
+  margin: 0;
 }
 
-/* line 125, ../sass/main.scss */
+/* line 129, ../sass/main.scss */
 .column-padding {
   padding-right: 2% !important;
 }
 
-/* line 133, ../sass/main.scss */
+/* line 137, ../sass/main.scss */
 #contact-links {
   margin: 0;
   padding: 0;
 }
 
-/* line 138, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 #contact-links li {
   display: inline-block;
   margin: 10px;
@@ -147,19 +157,19 @@ div .about-photo {
   width: 64px;
   height: 64px;
 }
-/* line 147, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 #contact-links li img {
   width: 64px;
   height: 64px;
   -webkit-border-radius: 11px;
   border-radius: 11px;
 }
-/* line 153, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 #contact-links li:hover {
   background: white;
 }
 
-/* line 162, ../sass/main.scss */
+/* line 166, ../sass/main.scss */
 #menu li {
   display: inline-block;
   margin: 10px;
@@ -170,43 +180,44 @@ div .about-photo {
   border-radius: 10px;
 }
 
-/* line 171, ../sass/main.scss */
+/* line 175, ../sass/main.scss */
 #menu li.active {
   background: #666;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
 }
 
-/* line 176, ../sass/main.scss */
+/* line 180, ../sass/main.scss */
 #menu li a {
   text-decoration: none;
   color: #000;
 }
 
-/* line 180, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 #menu li.active a:hover {
   color: #000;
 }
 
-/* line 183, ../sass/main.scss */
+/* line 187, ../sass/main.scss */
 #menu li:hover {
   background: rgba(255, 255, 255, 0.8);
 }
 
-/* line 187, ../sass/main.scss */
+/* line 191, ../sass/main.scss */
 #menu li a,
 #menu li.active a {
   padding: 9px 18px;
   display: block;
 }
 
-/* line 191, ../sass/main.scss */
+/* line 195, ../sass/main.scss */
 #menu li.active a {
   color: #fff;
 }
 
-/* line 194, ../sass/main.scss */
+/* line 198, ../sass/main.scss */
 #menu {
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
@@ -217,121 +228,156 @@ div .about-photo {
   margin: 0;
 }
 
-/* line 210, ../sass/main.scss */
+/* line 212, ../sass/main.scss */
+.mobile-menu a {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 64px;
+  width: 64px;
+  z-index: 1;
+  margin-top: 1%;
+  margin-right: 3%;
+}
+
+/* line 225, ../sass/main.scss */
+.mobile-menu img {
+  position: relative;
+  top: 0;
+  right: 0;
+  display: block;
+  height: 64px;
+  width: 64px;
+  z-index: 2;
+  margin-top: 1%;
+  margin-right: 3%;
+}
+
+/* line 241, ../sass/main.scss */
 .container {
   width: 100%;
   border: 0;
   clear: both;
 }
 
-/* line 216, ../sass/main.scss */
+/* line 247, ../sass/main.scss */
 .column {
   float: left;
   padding: 4px;
 }
 
-/* line 221, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .column-20 {
   width: 20%;
 }
 
-/* line 225, ../sass/main.scss */
+/* line 256, ../sass/main.scss */
 .column-25 {
   width: 25%;
 }
 
-/* line 229, ../sass/main.scss */
+/* line 260, ../sass/main.scss */
 .column-33 {
   width: 33%;
 }
 
-/* line 233, ../sass/main.scss */
+/* line 264, ../sass/main.scss */
 .column-50 {
   width: 50%;
 }
 
-/* line 237, ../sass/main.scss */
+/* line 268, ../sass/main.scss */
 .column-66 {
   width: 66.667%;
 }
 
-/* line 241, ../sass/main.scss */
+/* line 272, ../sass/main.scss */
 .column-75 {
   width: 75%;
 }
 
-/* line 245, ../sass/main.scss */
+/* line 276, ../sass/main.scss */
 .column-100 {
   width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
-  /* line 253, ../sass/main.scss */
+  /* line 284, ../sass/main.scss */
   .column-20, .column-25, .column-33,
   .column-50, .column-66, .column-75 {
     width: 100%;
   }
+
+  /* line 289, ../sass/main.scss */
+  #menu {
+    display: block;
+  }
 }
 @media screen and (max-width: 580px) {
-  /* line 262, ../sass/main.scss */
+  /* line 296, ../sass/main.scss */
   .project-img-text {
     font-size: 1.5em;
   }
 
-  /* line 266, ../sass/main.scss */
-  #menu li {
-    display: inline-block;
-    margin: 5px;
-    color: #000;
-    background: #fff;
-    background: rgba(255, 255, 255, 0.5);
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-  }
-
-  /* line 276, ../sass/main.scss */
+  /* line 301, ../sass/main.scss */
+  #menu li,
   #menu li.active {
-    background: #666;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
+    display: block;
+    margin: 0;
+    padding: 5px 0;
+    color: #000;
+    background: #ff3a90;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    border-bottom: 1px solid white;
   }
 
-  /* line 281, ../sass/main.scss */
+  /* line 318, ../sass/main.scss */
   #menu li a {
     text-decoration: none;
     color: #000;
   }
 
-  /* line 285, ../sass/main.scss */
+  /* line 322, ../sass/main.scss */
   #menu li.active a:hover {
     color: #000;
   }
 
-  /* line 288, ../sass/main.scss */
+  /* line 325, ../sass/main.scss */
   #menu li:hover {
-    background: rgba(255, 255, 255, 0.8);
+    background: #ff3a90;
   }
 
-  /* line 292, ../sass/main.scss */
+  /* line 329, ../sass/main.scss */
   #menu li a,
   #menu li.active a {
     padding: 5px 10px;
     display: block;
   }
 
-  /* line 297, ../sass/main.scss */
+  /* line 335, ../sass/main.scss */
   #menu li.active a {
-    color: #fff;
+    color: #000;
   }
 
-  /* line 300, ../sass/main.scss */
+  /* line 339, ../sass/main.scss */
   #menu {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
+    height: auto;
     z-index: 70;
     width: 100%;
     padding: 0;
     margin: 0;
+  }
+
+  /* line 357, ../sass/main.scss */
+  .mobile-menu a {
+    display: block;
+    background: inherit;
+    float: right;
   }
 }
