--- a/sass/main.scss
+++ b/sass/main.scss
@@ -278,6 +278,12 @@ div .about-photo {
 }
 
 
+@media screen and (min-width: 1025px) {
+	#menu {
+		display: block;
+	}
+}
+
 @media screen and (max-width: 1024px) { 
 
 	.column-20, .column-25, .column-33, 
@@ -340,7 +346,7 @@ div .about-photo {
 	display: none;
 	position: fixed;
 	// position:relative;
-	top:0;
+	top:64px;
 	left:0;
 	//height: 40px;
 	height: auto;
