--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
   background: #8c8b8c;
 }
 
-/* line 21, ../sass/main.scss */
+/* line 22, ../sass/main.scss */
 h1 {
   font-size: 2.5em;
   margin: .5em 0 .4em 0;
@@ -22,88 +22,88 @@ h1 {
   text-align: left;
 }
 
-/* line 27, ../sass/main.scss */
+/* line 28, ../sass/main.scss */
 h2 {
   font-size: 1.5em;
   margin: .5em 0 .2em 0;
 }
 
-/* line 31, ../sass/main.scss */
+/* line 32, ../sass/main.scss */
 h3 {
   font-size: 1em;
   margin: .5em 0 .2em 0;
 }
 
-/* line 36, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 p {
   margin: .5em 0 .5em 0;
   line-height: 1.3em;
 }
 
-/* line 40, ../sass/main.scss */
+/* line 41, ../sass/main.scss */
 .text-block {
   text-align: left;
 }
 
-/* line 49, ../sass/main.scss */
+/* line 50, ../sass/main.scss */
 .about {
   background-color: #8c8b8c;
 }
 
-/* line 52, ../sass/main.scss */
+/* line 53, ../sass/main.scss */
 .portfolio {
   background-color: #06377b;
 }
 
-/* line 55, ../sass/main.scss */
+/* line 56, ../sass/main.scss */
 .skills {
   background-color: #6f962b;
 }
 
-/* line 58, ../sass/main.scss */
+/* line 59, ../sass/main.scss */
 .contact {
   background-color: #5e5e5e;
 }
 
-/* line 61, ../sass/main.scss */
+/* line 62, ../sass/main.scss */
 #fullpage {
   width: 100%;
 }
 
-/* line 64, ../sass/main.scss */
+/* line 65, ../sass/main.scss */
 .section {
   text-align: center;
   width: 100%;
   padding: 0 3%;
 }
 
-/* line 70, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 .tableCell {
   /* For use with fullpage.js sections */
   vertical-align: top;
-  padding-top: 8%;
+  padding-top: 64px;
   padding-bottom: 4%;
 }
 
-/* line 80, ../sass/main.scss */
+/* line 81, ../sass/main.scss */
 div .about-photo {
   width: 75%;
   max-width: 300px;
   min-width: 175px;
 }
 
-/* line 90, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 .project {
   position: relative;
 }
 
-/* line 93, ../sass/main.scss */
+/* line 94, ../sass/main.scss */
 .project-img {
   width: 100%;
   height: 100%;
 }
 
-/* line 97, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .project-img-overlay {
   display: none;
   position: absolute;
@@ -114,12 +114,12 @@ div .about-photo {
   width: 100%;
 }
 
-/* line 107, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 .project:hover .project-img-overlay {
   display: block;
 }
 
-/* line 110, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 .project-img-overlay p {
   color: #fff;
   font-size: 2em;
@@ -136,18 +136,18 @@ div .about-photo {
   margin: 0;
 }
 
-/* line 129, ../sass/main.scss */
+/* line 130, ../sass/main.scss */
 .column-padding {
   padding-right: 2% !important;
 }
 
-/* line 137, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 #contact-links {
   margin: 0;
   padding: 0;
 }
 
-/* line 142, ../sass/main.scss */
+/* line 143, ../sass/main.scss */
 #contact-links li {
   display: inline-block;
   margin: 10px;
@@ -157,19 +157,19 @@ div .about-photo {
   width: 64px;
   height: 64px;
 }
-/* line 151, ../sass/main.scss */
+/* line 152, ../sass/main.scss */
 #contact-links li img {
   width: 64px;
   height: 64px;
   -webkit-border-radius: 11px;
   border-radius: 11px;
 }
-/* line 157, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 #contact-links li:hover {
   background: white;
 }
 
-/* line 166, ../sass/main.scss */
+/* line 167, ../sass/main.scss */
 #menu li {
   display: inline-block;
   margin: 10px;
@@ -180,42 +180,42 @@ div .about-photo {
   border-radius: 10px;
 }
 
-/* line 175, ../sass/main.scss */
+/* line 176, ../sass/main.scss */
 #menu li.active {
   background: #666;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
 }
 
-/* line 180, ../sass/main.scss */
+/* line 181, ../sass/main.scss */
 #menu li a {
   text-decoration: none;
   color: #000;
 }
 
-/* line 184, ../sass/main.scss */
+/* line 185, ../sass/main.scss */
 #menu li.active a:hover {
   color: #000;
 }
 
-/* line 187, ../sass/main.scss */
+/* line 188, ../sass/main.scss */
 #menu li:hover {
   background: rgba(255, 255, 255, 0.8);
 }
 
-/* line 191, ../sass/main.scss */
+/* line 192, ../sass/main.scss */
 #menu li a,
 #menu li.active a {
   padding: 9px 18px;
   display: block;
 }
 
-/* line 195, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 #menu li.active a {
   color: #fff;
 }
 
-/* line 198, ../sass/main.scss */
+/* line 199, ../sass/main.scss */
 #menu {
   display: block;
   position: fixed;
@@ -228,105 +228,116 @@ div .about-photo {
   margin: 0;
 }
 
-/* line 212, ../sass/main.scss */
-.mobile-menu a {
+/* line 213, ../sass/main.scss */
+.mobile-menu {
   display: none;
   position: fixed;
   top: 0;
+  left: 0;
   right: 0;
   height: 64px;
-  width: 64px;
+  background: white;
   z-index: 1;
-  margin-top: 1%;
-  margin-right: 3%;
 }
 
 /* line 225, ../sass/main.scss */
+.mobile-menu a {
+  display: none;
+  position: relative;
+  top: 0;
+  right: 0;
+  height: 60px;
+  width: 60px;
+  margin-top: .5%;
+  margin-right: 3%;
+}
+
+/* line 237, ../sass/main.scss */
 .mobile-menu img {
   position: relative;
   top: 0;
   right: 0;
   display: block;
-  height: 64px;
-  width: 64px;
-  z-index: 2;
-  margin-top: 1%;
+  height: 60px;
+  width: 60px;
+  margin-top: .5%;
   margin-right: 3%;
 }
 
-/* line 241, ../sass/main.scss */
+/* line 253, ../sass/main.scss */
 .container {
-  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
   border: 0;
   clear: both;
 }
 
-/* line 247, ../sass/main.scss */
+/* line 260, ../sass/main.scss */
 .column {
   float: left;
   padding: 4px;
 }
 
-/* line 252, ../sass/main.scss */
+/* line 265, ../sass/main.scss */
 .column-20 {
   width: 20%;
 }
 
-/* line 256, ../sass/main.scss */
+/* line 269, ../sass/main.scss */
 .column-25 {
   width: 25%;
 }
 
-/* line 260, ../sass/main.scss */
+/* line 273, ../sass/main.scss */
 .column-33 {
   width: 33%;
 }
 
-/* line 264, ../sass/main.scss */
+/* line 277, ../sass/main.scss */
 .column-50 {
   width: 50%;
 }
 
-/* line 268, ../sass/main.scss */
+/* line 281, ../sass/main.scss */
 .column-66 {
   width: 66.667%;
 }
 
-/* line 272, ../sass/main.scss */
+/* line 285, ../sass/main.scss */
 .column-75 {
   width: 75%;
 }
 
-/* line 276, ../sass/main.scss */
+/* line 289, ../sass/main.scss */
 .column-100 {
   width: 100%;
 }
 
-@media screen and (min-width: 1025px) {
-  /* line 282, ../sass/main.scss */
-  #menu {
-    display: block;
-  }
-}
-@media screen and (max-width: 1024px) {
-  /* line 290, ../sass/main.scss */
-  .column-20, .column-25, .column-33,
-  .column-50, .column-66, .column-75 {
-    width: 100%;
-  }
-
+@media screen and (min-width: 961px) {
   /* line 295, ../sass/main.scss */
   #menu {
     display: block;
   }
 }
+@media screen and (max-width: 960px) {
+  /* line 304, ../sass/main.scss */
+  .column-20, .column-25, .column-33,
+  .column-50, .column-66, .column-75 {
+    width: 100%;
+  }
+
+  /* line 309, ../sass/main.scss */
+  #menu {
+    display: block;
+  }
+}
 @media screen and (max-width: 580px) {
-  /* line 302, ../sass/main.scss */
+  /* line 316, ../sass/main.scss */
   .project-img-text {
     font-size: 1.5em;
   }
 
-  /* line 307, ../sass/main.scss */
+  /* line 321, ../sass/main.scss */
   #menu li,
   #menu li.active {
     display: block;
@@ -339,35 +350,35 @@ div .about-photo {
     border-bottom: 1px solid white;
   }
 
-  /* line 324, ../sass/main.scss */
+  /* line 338, ../sass/main.scss */
   #menu li a {
     text-decoration: none;
     color: #000;
   }
 
-  /* line 328, ../sass/main.scss */
+  /* line 342, ../sass/main.scss */
   #menu li.active a:hover {
     color: #000;
   }
 
-  /* line 331, ../sass/main.scss */
+  /* line 345, ../sass/main.scss */
   #menu li:hover {
     background: #ff3a90;
   }
 
-  /* line 335, ../sass/main.scss */
+  /* line 349, ../sass/main.scss */
   #menu li a,
   #menu li.active a {
     padding: 5px 10px;
     display: block;
   }
 
-  /* line 341, ../sass/main.scss */
+  /* line 355, ../sass/main.scss */
   #menu li.active a {
     color: #000;
   }
 
-  /* line 345, ../sass/main.scss */
+  /* line 359, ../sass/main.scss */
   #menu {
     display: none;
     position: fixed;
@@ -380,7 +391,12 @@ div .about-photo {
     margin: 0;
   }
 
-  /* line 363, ../sass/main.scss */
+  /* line 377, ../sass/main.scss */
+  .mobile-menu {
+    display: block;
+  }
+
+  /* line 381, ../sass/main.scss */
   .mobile-menu a {
     display: block;
     background: inherit;
